--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<p>Hello World from React ki dunya</p>    
+<p>Hello World from React ki dunya</p>  
+<p1>Hello every one this is my second commit</p1>  
 </body>
 </html>
